sidebar scroll width disable and topbar z-index fixed

--- a/src/cssModule/Menu.module.css
+++ b/src/cssModule/Menu.module.css
@@ -13,6 +13,7 @@
     margin-left: 5px;
     opacity: 1;
     visibility: visible;
+    scrollbar-width: none !important;
 }
 .hideAside{
     margin-left: -240px;
