--- a/src/cssModule/Topbar.module.css
+++ b/src/cssModule/Topbar.module.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     margin-bottom: 5px;
-    z-index: 999999;
+    z-index: 99;
 }
 .container{
     width: 100% ;
